--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -4,3 +4,4 @@ require:
     - play
     - org.mockito -> mockito-all 1.9.0
     - org.hamcrest -> hamcrest-all 1.1
+    - com.google.guava -> guava 11.0.1
