--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,7 +1,7 @@
 # Application dependencies
 
 require:
-    - play
+    - play 1.2.4
     - org.mockito -> mockito-all 1.9.0
     - org.hamcrest -> hamcrest-all 1.1
     - com.google.guava -> guava 11.0.1
