Production db config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,6 +126,10 @@ db=mem
 # hibernate.use_sql_comments=true
 # ...
 #
+prod.db=${DATABASE_URL}
+prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+prod.jpa.ddl=create
+
 # Store path for Blob content
 attachments.path=data/attachments
 
