--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,9 +126,9 @@ db=mem
 # hibernate.use_sql_comments=true
 # ...
 #
-prod.db=${DATABASE_URL}
-prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-prod.jpa.ddl=create
+%prod.db=${DATABASE_URL}
+%prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+%prod.jpa.ddl=create
 
 # Store path for Blob content
 attachments.path=data/attachments
