--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -5,3 +5,4 @@ require:
     - org.mockito -> mockito-all 1.9.0
     - org.hamcrest -> hamcrest-all 1.1
     - com.google.guava -> guava 11.0.1
+    - play -> guice 1.2
