--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -6,3 +6,11 @@ require:
     - org.hamcrest -> hamcrest-all 1.1
     - com.google.guava -> guava 11.0.1
     - play -> guice 1.2
+    - org.markdownj -> markdownj 0.3.0-1.0.2b4
+
+repositories:
+    - scala-tools:
+        type: iBiblio
+        root: "http://scala-tools.org/repo-releases"
+        contains:
+            - org.markdownj -> *
