--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,8 +28,8 @@ application.langs="en"
 # db.default.password=
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql:marknote"
-db.default.user=marknote
-db.default.password=marknote
+#db.default.user=marknote
+#db.default.password=marknote
 
 # Evolutions
 # ~~~~~
