--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,10 +26,8 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql:marknote"
-#db.default.user=marknote
-#db.default.password=marknote
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:marknote"
 
 # Evolutions
 # ~~~~~
